--- a/week2_non_vercorized.ipynb
+++ b/week2_non_vercorized.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPAp8FvDbX6ehqaBEGxqHl0",
+      "authorship_tag": "ABX9TyOJOd+Zo6Th7J43JLqDgB3K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -124,7 +124,7 @@
       "metadata": {
         "id": "hoa4YxuuH8sk"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -135,7 +135,7 @@
       "metadata": {
         "id": "Q9bk8YWCN7L5"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -149,7 +149,7 @@
       "metadata": {
         "id": "Mdjdq60BGI3J"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -167,7 +167,7 @@
         },
         "outputId": "72dec2cc-2455-43e2-88b4-ba473ee93833"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -621,7 +621,7 @@
       "metadata": {
         "id": "WrCuFOOaFlmt"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -637,7 +637,7 @@
         "id": "fNAHJR6CHvxQ",
         "outputId": "401c8ace-765d-411e-fd03-16048aaddc03"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -706,7 +706,7 @@
       "metadata": {
         "id": "YGhTht_0hY1j"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -732,7 +732,7 @@
         "id": "OjHJBm8tRi7C",
         "outputId": "55c12b19-d164-4a6a-bdc0-d3028f35b3b5"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -803,7 +803,7 @@
       "metadata": {
         "id": "5JKYd4m5l6Ex"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -825,7 +825,7 @@
       "metadata": {
         "id": "sk7Ne1HhIjWO"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -841,7 +841,7 @@
         "id": "-YjIR-fmR9-C",
         "outputId": "7d2a649f-f25e-4e1a-fecf-12f7186db93d"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -861,7 +861,7 @@
         "for i in range(m):\n",
         "    # y_hat[0, i] :probability for ith patient\n",
         "    if y_hat[0, i] < 0.9:\n",
-        "        print(f\"Patient {i}: Probability = {y_hat[0, i]:.4f}\")\n",
+        "        #print(f\"Patient {i}: Probability = {y_hat[0, i]:.4f}\")\n",
         "        count += 1\n",
         "\n",
         "if count == 0:\n",
@@ -876,7 +876,7 @@
         "id": "W-UJxyOcTC_-",
         "outputId": "d1a70227-71cf-49a1-a148-521816fff1f6"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1539,7 +1539,7 @@
       "metadata": {
         "id": "FFGgUq1Rl9MH"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1586,15 +1586,15 @@
         "\n",
         "gradient descent is described as:\n",
         "$$\\begin{align*} \\text{repeat}&\\text{ until convergence:} \\; \\lbrace \\newline\n",
-        "\\;  w &= w -  \\alpha \\frac{\\partial J(w,b)}{\\partial w} \\tag{3}  \\; \\newline\n",
+        "\\;  w &= w -  \\alpha \\frac{\\partial J(w,b)}{\\partial w}  \\; \\newline\n",
         " b &= b -  \\alpha \\frac{\\partial J(w,b)}{\\partial b}  \\newline \\rbrace\n",
         "\\end{align*}$$\n",
         "where, parameters $w$, $b$ are updated simultaneously.  \n",
         "The gradient is defined as:\n",
         "$$\n",
         "\\begin{align}\n",
-        "\\frac{\\partial J(w,b)}{\\partial w}  &= \\frac{1}{m} \\sum\\limits_{i = 0}^{m-1} (f_{w,b}(x^{(i)}) - y^{(i)})x^{(i)} \\tag{4}\\\\\n",
-        "  \\frac{\\partial J(w,b)}{\\partial b}  &= \\frac{1}{m} \\sum\\limits_{i = 0}^{m-1} (f_{w,b}(x^{(i)}) - y^{(i)}) \\tag{5}\\\\\n",
+        "\\frac{\\partial J(w,b)}{\\partial w}  &= \\frac{1}{m} \\sum\\limits_{i = 0}^{m-1} (f_{w,b}(x^{(i)}) - y^{(i)})x^{(i)} \\\\\n",
+        "  \\frac{\\partial J(w,b)}{\\partial b}  &= \\frac{1}{m} \\sum\\limits_{i = 0}^{m-1} (f_{w,b}(x^{(i)}) - y^{(i)}) \\\\\n",
         "\\end{align}\n",
         "$$\n",
         "\n",
@@ -1652,7 +1652,7 @@
       "metadata": {
         "id": "Bwy7rKWWgnQl"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1671,7 +1671,7 @@
       "metadata": {
         "id": "SPD-3tO7og5b"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1708,7 +1708,7 @@
       "metadata": {
         "id": "ZfadO70bgjV2"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1736,7 +1736,7 @@
         "id": "TWH9NkZUotYh",
         "outputId": "5e0b339c-4188-4b2b-f0de-0e213a925153"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1881,7 +1881,7 @@
       "metadata": {
         "id": "tAe-Bjj_j_lj"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1901,15 +1901,15 @@
         "Recall the gradient descent algorithm utilizes the gradient calculation:\n",
         "$$\\begin{align*}\n",
         "&\\text{repeat until convergence:} \\; \\lbrace \\\\\n",
-        "&  \\; \\; \\;w_j = w_j -  \\alpha \\frac{\\partial J(\\mathbf{w},b)}{\\partial w_j} \\tag{1}  \\; & \\text{for j := 0..n-1} \\\\\n",
+        "&  \\; \\; \\;w_j = w_j -  \\alpha \\frac{\\partial J(\\mathbf{w},b)}{\\partial w_j}  \\; & \\text{for j := 0..n-1} \\\\\n",
         "&  \\; \\; \\;  \\; \\;b = b -  \\alpha \\frac{\\partial J(\\mathbf{w},b)}{\\partial b} \\\\\n",
         "&\\rbrace\n",
         "\\end{align*}$$\n",
         "\n",
         "Where each iteration performs simultaneous updates on $w_j$ for all $j$, where\n",
         "$$\\begin{align*}\n",
-        "\\frac{\\partial J(\\mathbf{w},b)}{\\partial w_j}  &= \\frac{1}{m} \\sum\\limits_{i = 0}^{m-1} (f_{\\mathbf{w},b}(\\mathbf{x}^{(i)}) - y^{(i)})x_{j}^{(i)} \\tag{2} \\\\\n",
-        "\\frac{\\partial J(\\mathbf{w},b)}{\\partial b}  &= \\frac{1}{m} \\sum\\limits_{i = 0}^{m-1} (f_{\\mathbf{w},b}(\\mathbf{x}^{(i)}) - y^{(i)}) \\tag{3}\n",
+        "\\frac{\\partial J(\\mathbf{w},b)}{\\partial w_j}  &= \\frac{1}{m} \\sum\\limits_{i = 0}^{m-1} (f_{\\mathbf{w},b}(\\mathbf{x}^{(i)}) - y^{(i)})x_{j}^{(i)}  \\\\\n",
+        "\\frac{\\partial J(\\mathbf{w},b)}{\\partial b}  &= \\frac{1}{m} \\sum\\limits_{i = 0}^{m-1} (f_{\\mathbf{w},b}(\\mathbf{x}^{(i)}) - y^{(i)})\n",
         "\\end{align*}$$\n",
         "\n",
         "* m is the number of training examples in the data set      \n",
@@ -1964,7 +1964,7 @@
       "metadata": {
         "id": "1yYsKg2wXe4d"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1985,7 +1985,7 @@
         "id": "V_5XjyNDr7Ne",
         "outputId": "631006fd-d349-4d79-e273-8940f0992aec"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2072,7 +2072,7 @@
       "metadata": {
         "id": "4rMpg8a8hnYj"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2109,7 +2109,7 @@
         "id": "bs3vhHqas5Ck",
         "outputId": "c4dd56a2-0a3f-44b3-e9d5-39cf16f0ace6"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
